# coronavirus-uk

./: .bumpversion.cfg  README.md  pyproject.toml
notebooks/: occurred_vs_reported.ipynb
specs/: config.json  deaths_by_date.vg.json  deaths_by_day.vg.json  deaths_by_week.vg.json
src/: print_url.py
