[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Iain Dillingham <iain@dillingham.me.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
ipython = "^7.20.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
